fixed link sizing on mobile bug

--- a/style.css
+++ b/style.css
@@ -464,6 +464,10 @@ footer {
         font-size: 1.2rem;
     }
 
+    .hover-underline {
+        font-size: 1.2rem;
+    }
+
     h2 {
         font-size: 3.6rem;
     }
